Got a simple cycle working with Postgresql as backend and spring-data-jpa as the repository. Transactions enabled annotations.

--- a/techy/src/main/webapp/WEB-INF/thymeleaf/index.html
+++ b/techy/src/main/webapp/WEB-INF/thymeleaf/index.html
@@ -7,6 +7,6 @@
 		<title>Home Page</title>
 	</head>
 	<body>
-		Hello World, <span th:text="${passenger}">Anaz</span>!
+		Hello World, <span th:text="user.username">Anaz</span>!
 	</body>
 </html>
